# ROS_ROBOT

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.9
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.9
install/moveit_core/include/: moveit_butterworth_filter_export.h  moveit_collision_detection_bullet_export.h  moveit_collision_detection_export.h  moveit_collision_detection_fcl_export.h  moveit_collision_distance_field_export.h  (+3 more)
log/: latest_build
src/autopartol_interfaces/: CMakeLists.txt  package.xml
src/autopartol_robot/: setup.py
src/car_application/: package.xml  setup.cfg  setup.py
src/car_navigation2/: CMakeLists.txt  package.xml
src/cpp06_urdf/: CMakeLists.txt
src/cpp06_urdf/config/: cartographer.lua  display_robot_model.rviz
src/cpp06_urdf/launch/: display_robot.launch.py  gazebo_sim.launch.py
src/cpp06_urdf/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL
src/cpp06_urdf/rviz/: urdf.rviz
src/cpp06_urdf/urdf/urdf/: arm_BRTIRUS0805A_SLDASM.urdf  demo01_helloworld.urdf  demo02_link.urdf  demo03_joint.urdf  my_car.gv  two_wheels.urdf
src/cpp06_urdf/urdf/xacro/: car_base.urdf.xacro  car_camera.urdf.xacro  car_caster.urdf.xacro  car_control.urdf.xacro  demo04_base_include.urdf.xacro  gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
src/cpp06_urdf/worlds/: custom_room.world  house1  house3
src/test_moveit_config/: .setup_assistant  frames_2025-07-04_14.42.14.gv  package.xml
(+1518 files in other folders)
